--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -28,6 +28,7 @@
 
   &_parallax {
     position: relative;
+    z-index: $under-content;
 
     &__background {
       position: absolute;
@@ -40,7 +41,7 @@
       background-attachment: fixed;
       background-position: 0 center;
       background-size: cover;
-      z-index: $under-content;
+      z-index: $parallax-bg;
     }
   }
 }
